--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,11 +31,11 @@ jobs:
           $pfx_bytes = [System.Convert]::FromBase64String($pfx_base64)
           [System.IO.File]::WriteAllBytes("cert.pfx", $pfx_bytes)
           $pfx_password_secure = ConvertTo-SecureString -String $pfx_password -AsPlainText -Force
-          Import-PfxCertificate -FilePath "cert.pfx" -CertStoreLocation Cert:\CurrentUser\My -Password $pfx_password_secure
+          Import-PfxCertificate -FilePath "cert.pfx" -CertStoreLocation Cert:\CurrentUser\My -Password $pfx_password_secure        
 
       - name: Build and Package MAUI App for Windows
         run: |
-          dotnet publish -f net8.0-windows10.0.22000.0 -c Release --self-contained `
+          dotnet publish -f net8.0-windows10.0.22000.0 -c Release --self-contained -v:d `
           -p:RuntimeIdentifier=win10-x64 `
           -p:GenerateAppxPackageOnBuild=true `
           -p:EnableCompression=true `
