--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,16 +33,10 @@ jobs:
           $pfx_password_secure = ConvertTo-SecureString -String $pfx_password -AsPlainText -Force
           Import-PfxCertificate -FilePath "cert.pfx" -CertStoreLocation Cert:\CurrentUser\My -Password $pfx_password_secure
           
-           # ➡️ New step to install C++ workloads
-      - name: Install Visual Studio C++ workloads
-        shell: pwsh
+           # ➡️ SOLUTION: Add this new step to install the C++ tools
+      - name: Install Visual Studio C++ build tools
         run: |
-          Write-Host "Installing Windows App SDK prerequisites for a robust build environment..."
-          & "C:\Program Files (x86)\Microsoft Visual Studio\Installer\vswhere.exe" -latest -products Microsoft.VisualStudio.Product.BuildTools -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 -format json | ConvertFrom-Json | Select-Object -First 1 | ForEach-Object {
-              & "$_.installationPath\Common7\Tools\Launch-VsDevCmd.bat"
-              Start-Process -FilePath "C:\Program Files (x86)\Microsoft Visual Studio\Installer\vs_installer.exe" -ArgumentList "modify --installPath ""$($_.installationPath)"" --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 --quiet --wait --norestart --force" -Wait -PassThru
-          }
-          Write-Host "Prerequisites installation complete."
+          "C:\Program Files (x86)\Microsoft Visual Studio\Installer\vs_installer.exe" modify --installPath "C:\Program Files\Microsoft Visual Studio\2022\Enterprise" --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 --quiet --wait --norestart --force
 
       - name: Build and Package MAUI App for Windows
         run: |
