--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,10 +33,20 @@ jobs:
           $pfx_password_secure = ConvertTo-SecureString -String $pfx_password -AsPlainText -Force
           Import-PfxCertificate -FilePath "cert.pfx" -CertStoreLocation Cert:\CurrentUser\My -Password $pfx_password_secure
 
+          - name: Update AppxManifest Version
+            shell: pwsh
+            run: |
+              $appxManifestPath = "$($env:GITHUB_WORKSPACE)\Platforms\Windows\Package.appxmanifest"
+              $xml = [xml](Get-Content $appxManifestPath)
+              $version = "1.0.$($env:GITHUB_RUN_NUMBER).0"
+              $xml.Package.Identity.Version = $version
+              $xml.Save($appxManifestPath)
+              Write-Host "Updated AppxManifest version to: $version"
+
       - name: Build and Package MAUI App for Windows
         shell: pwsh
         run: |
-          $appVersion = "1.0.$($env:GITHUB_RUN_NUMBER).0"
+          # $appVersion = "1.0.$($env:GITHUB_RUN_NUMBER).0"
           dotnet publish -f net8.0-windows10.0.22000.0 -c Release -p:WindowsPackageType=MSIX -p:RuntimeIdentifier=win-x64 -p:Platform=x64  -p:AppxPackageDir="AppPackages\" -p:PublishReadyToRun=false -p:ApplicationVersion=$appVersion --self-contained true
 
       - name: Find Installer Package
